--- a/templates/fragments/loader.html
+++ b/templates/fragments/loader.html
@@ -38,7 +38,7 @@
                 <div class="orbit-item"></div>
             </div>
             <div class="hexagon holo-hex">
-                <span class="medical-icon"><i class="fa-solid fa-user-doctor"></i></span>
+                <span class="medical-icon"><i class="fa-solid fa-user-md"></i></span>
                 <span class="holo-glow"></span>
             </div>
         </div>
